[gd_scene load_steps=34 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://InteractivePiece/_Master/Resource/BrickSmallDark0012_1_download600.jpg" type="Texture" id=2]
[ext_resource path="res://Administration/CameraMan.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/_master/Board.gd" type="Script" id=4]
[ext_resource path="res://Administration/Menus.tscn" type="PackedScene" id=5]
[ext_resource path="res://Administration/CompanionManager.tscn" type="PackedScene" id=6]
[ext_resource path="res://Administration/Scripts/EventManager.gd" type="Script" id=7]
[ext_resource path="res://Resources/Effects/PauseEffect.tscn" type="PackedScene" id=8]
[ext_resource path="res://Administration/Scripts/GameManager.gd" type="Script" id=9]
[ext_resource path="res://Administration/SkillsManager.tscn" type="PackedScene" id=10]
[ext_resource path="res://Administration/BallHandler.tscn" type="PackedScene" id=11]
[ext_resource path="res://Administration/LevelUtilities.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/HUD/HUD.tscn" type="PackedScene" id=13]
[ext_resource path="res://InteractivePiece/Balls/PlayerBall.tscn" type="PackedScene" id=14]
[ext_resource path="res://Levels/_master/BossArena.gd" type="Script" id=15]
[ext_resource path="res://Bosses/Resource/BossPanel.tscn" type="PackedScene" id=17]
[ext_resource path="res://Bosses/_master/BossTemplate.tscn" type="PackedScene" id=18]
[ext_resource path="res://Levels/_master/DeathTrigger.gd" type="Script" id=19]
[ext_resource path="res://InteractivePiece/_Master/BoardSolid.tscn" type="PackedScene" id=20]
[ext_resource path="res://InteractivePiece/OtherPieces/Launcher.tscn" type="PackedScene" id=21]
[ext_resource path="res://DefaultPieces/OneWayGate.tscn" type="PackedScene" id=22]
[ext_resource path="res://InteractivePiece/OtherPieces/Flipper.tscn" type="PackedScene" id=23]
[ext_resource path="res://Administration/LightsMeta.tscn" type="PackedScene" id=32]
[ext_resource path="res://Resources/Fonts/MovieTheaterFont.ttf" type="DynamicFontData" id=34]
[ext_resource path="res://UI/StoryCutscene.tscn" type="PackedScene" id=35]
[ext_resource path="res://Resources/Fonts/ClassicArcadeFont.ttf" type="DynamicFontData" id=36]

[sub_resource type="Animation" id=21]
resource_name = "IntroCutscene"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameManager/LightsMeta:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 9, 9.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CameraMan:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -2500 ), Vector2( 0, -3000 ), Vector2( 0, 2500 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameManager/HUD:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 7, 7.5, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("IntroCutscene/SkipTextPanning:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2, 4, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("IntroCutscene/BoardName:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GameManager/LightsMeta:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CameraMan:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2500 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameManager/HUD:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("IntroCutscene/SkipTextPanning:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=24]
extra_spacing_char = -1
font_data = ExtResource( 36 )

[sub_resource type="DynamicFont" id=23]
size = 200
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 34 )

[sub_resource type="Curve2D" id=14]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1920, 2880, 0, 0, 0, 0, -1920, 832, 0, 0, 0, 0, 0, 832, 0, 0, -383.898, 0.0610611, 0, 960, 0.186539, -384.001, -0.186539, 384.001, -640, 1536, 0, 0, 0, 0, -640, 2304, 0, 0, -20.9598, -14.2332, -133, 2663, -21.0475, -11.4703, 0, 0, -149, 2691, 0, 0, 0, 0, -32, 2752, 0, 0, 0, 0, -32, 2816, 0, 0, 0, 0, 0, 2816, 0, 0, 0, 0, 0, 2880, 0, 0, 0, 0, -1920, 2880 )
}

[sub_resource type="Curve2D" id=15]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1920, 2880, 0, 0, 0, 0, -1920, 832, 0, 0, 0, 0, 0, 832, 0, 0, -383.898, 0.0610611, 0, 960, 0.186539, -384.001, -0.186539, 384.001, -640, 1536, 0, 0, 0, 0, -640, 2304, 0, 0, 0, 0, -212, 2607, 0, 0, 0, 0, -313, 2752, 0, 0, 0, 0, -260, 2789, 0, 0, 0, 0, -158, 2645, 0, 0, -20.9598, -14.2332, -133, 2663, -21.0475, -11.4703, 0, 0, -149, 2691, 0, 0, 0, 0, -32, 2752, 0, 0, 0, 0, -32, 2816, 0, 0, 0, 0, 0, 2816, 0, 0, 0, 0, 0, 2880, 0, 0, 0, 0, -1920, 2880 )
}

[sub_resource type="PhysicsMaterial" id=16]
friction = 0.0
rough = true
absorbent = true

[node name="Board2" type="Node2D"]
pause_mode = 2
script = ExtResource( 4 )

[node name="StoryCutscene" parent="." instance=ExtResource( 35 )]
visible = false
StoryDialogue = PoolStringArray( "It was the year 2093, and the panda crisis nearly drove mankind to the brink of extinction. \n Society is now but a shell of its former glory, yet its inhabitants live on. \n Corporations have taken over, inducing terror among  the populace as they strive for more power.", "" )

[node name="IntroCutscene" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 128

[node name="AnimationPlayer" type="AnimationPlayer" parent="IntroCutscene"]
pause_mode = 2
root_node = NodePath("../..")
anims/IntroCutscene = SubResource( 21 )
anims/RESET = SubResource( 22 )

[node name="SkipTextPanning" type="Label" parent="IntroCutscene"]
pause_mode = 2
visible = false
margin_left = 1657.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 24 )
text = "Press Escape to skip cutscene..."
align = 1
valign = 1

[node name="BoardName" type="Label" parent="IntroCutscene"]
visible = false
margin_left = 430.0
margin_top = 334.0
margin_right = 1480.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 23 )
text = "BOARD_TEMPLATE"
align = 1
valign = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -80.0
bus = "Music"

[node name="Coolness" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="BoardBackground" type="Polygon2D" parent="."]
z_index = -50
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
texture = ExtResource( 2 )
texture_scale = Vector2( 2, 2 )
polygon = PoolVector2Array( -768, 3066, -768, -3068, 768, -3068, 768, 3066 )
__meta__ = {
"_edit_lock_": true
}

[node name="Menus" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CompMan" parent="." instance=ExtResource( 6 )]

[node name="EventManager" type="Node" parent="."]
pause_mode = 2
process_priority = 1
script = ExtResource( 7 )
numOfTiers = 1

[node name="CameraMan" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 2500 )

[node name="PauseEffect" parent="." instance=ExtResource( 8 )]
layer = 128

[node name="GameManager" type="Node" parent="."]
pause_mode = 1
script = ExtResource( 9 )
Tier = [ NodePath("BossArena") ]

[node name="BossArena" type="Node" parent="GameManager"]
script = ExtResource( 15 )
tierNum = 1

[node name="Objectives" type="Node" parent="GameManager/BossArena"]

[node name="Boss" parent="GameManager/BossArena" instance=ExtResource( 18 )]
position = Vector2( 0, -2209 )

[node name="ConquestPanel" parent="GameManager/BossArena" instance=ExtResource( 17 )]
position = Vector2( 0, -1592 )

[node name="SpawnPoints" type="Node" parent="GameManager/BossArena"]

[node name="LauncherSpawn" type="Position2D" parent="GameManager/BossArena/SpawnPoints"]
position = Vector2( 224, -1184 )

[node name="RightFlipperSpawn" type="Position2D" parent="GameManager/BossArena/SpawnPoints"]
position = Vector2( 128, -1344 )

[node name="LeftFlipperSpawn" type="Position2D" parent="GameManager/BossArena/SpawnPoints"]
position = Vector2( -128, -1344 )

[node name="AreaTriggers" type="Node" parent="GameManager/BossArena"]

[node name="BossTrigger" type="Area2D" parent="GameManager/BossArena/AreaTriggers"]
visible = false
position = Vector2( -16, -2016 )
z_index = -10
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="Area" type="CollisionPolygon2D" parent="GameManager/BossArena/AreaTriggers/BossTrigger"]
position = Vector2( 0, 2856 )
polygon = PoolVector2Array( -776, -1804, -776, -3860, 776, -3860, 776, -1804 )

[node name="LaunchTube" type="Area2D" parent="GameManager/BossArena/AreaTriggers"]
collision_layer = 0

[node name="Area" type="CollisionPolygon2D" parent="GameManager/BossArena/AreaTriggers/LaunchTube"]
position = Vector2( 0, -3000 )
polygon = PoolVector2Array( 160, 1816, 224, 1768, 272, 1840, 208, 1888 )

[node name="DeathTrigger" type="Area2D" parent="GameManager/BossArena/AreaTriggers"]
position = Vector2( 0, -1093 )
z_index = -10
collision_layer = 0
monitorable = false
script = ExtResource( 19 )

[node name="Collision" type="CollisionPolygon2D" parent="GameManager/BossArena/AreaTriggers/DeathTrigger"]
polygon = PoolVector2Array( -32, 13, 32, 13, 32, 69, -32, 69 )

[node name="Solids" type="Node" parent="GameManager/BossArena"]

[node name="Left" parent="GameManager/BossArena/Solids" instance=ExtResource( 20 )]
position = Vector2( 0, -3840 )
curve = SubResource( 14 )
accuracy = 3
radius = 32
sides = 32

[node name="Collision" parent="GameManager/BossArena/Solids/Left/Solid" index="0"]
polygon = PoolVector2Array( -1920, 2880, -1920, 832, 0, 832, 0, 960, -70.4499, 962.26, -137.713, 969.017, -201.602, 980.273, -261.931, 996.026, -318.511, 1016.28, -371.156, 1041.03, -395.944, 1055.09, -419.679, 1070.28, -442.336, 1086.59, -463.892, 1104.02, -484.324, 1122.58, -503.608, 1142.27, -521.722, 1163.08, -538.641, 1185.02, -554.343, 1208.08, -568.803, 1232.26, -581.999, 1257.57, -593.907, 1284.01, -604.504, 1311.57, -613.766, 1340.25, -628.192, 1401, -636.999, 1466.25, -640, 1536, -640, 2304, -133, 2663, -134.95, 2661.8, -136.865, 2660.84, -138.74, 2660.13, -139.66, 2659.86, -140.569, 2659.65, -141.464, 2659.49, -142.345, 2659.38, -143.212, 2659.32, -144.063, 2659.32, -144.899, 2659.36, -145.718, 2659.45, -146.519, 2659.58, -147.302, 2659.76, -148.066, 2659.98, -148.811, 2660.24, -149.535, 2660.54, -150.238, 2660.88, -150.919, 2661.25, -151.577, 2661.66, -152.823, 2662.58, -153.969, 2663.62, -155.01, 2664.77, -155.94, 2666.02, -156.753, 2667.36, -157.442, 2668.77, -158.003, 2670.25, -158.428, 2671.78, -158.713, 2673.35, -158.852, 2674.94, -158.837, 2676.56, -158.664, 2678.17, -158.327, 2679.78, -157.819, 2681.38, -157.5, 2682.16, -157.135, 2682.94, -156.725, 2683.7, -156.269, 2684.46, -155.766, 2685.2, -155.215, 2685.92, -153.967, 2687.32, -152.519, 2688.64, -150.865, 2689.87, -149, 2691, -32, 2752, -32, 2816, 0, 2816, 0, 2880 )

[node name="Poly" parent="GameManager/BossArena/Solids/Left" index="1"]
polygon = PoolVector2Array( -1920, 2880, -1920, 832, 0, 832, 0, 960, -70.4499, 962.26, -137.713, 969.017, -201.602, 980.273, -261.931, 996.026, -318.511, 1016.28, -371.156, 1041.03, -395.944, 1055.09, -419.679, 1070.28, -442.336, 1086.59, -463.892, 1104.02, -484.324, 1122.58, -503.608, 1142.27, -521.722, 1163.08, -538.641, 1185.02, -554.343, 1208.08, -568.803, 1232.26, -581.999, 1257.57, -593.907, 1284.01, -604.504, 1311.57, -613.766, 1340.25, -628.192, 1401, -636.999, 1466.25, -640, 1536, -640, 2304, -133, 2663, -134.95, 2661.8, -136.865, 2660.84, -138.74, 2660.13, -139.66, 2659.86, -140.569, 2659.65, -141.464, 2659.49, -142.345, 2659.38, -143.212, 2659.32, -144.063, 2659.32, -144.899, 2659.36, -145.718, 2659.45, -146.519, 2659.58, -147.302, 2659.76, -148.066, 2659.98, -148.811, 2660.24, -149.535, 2660.54, -150.238, 2660.88, -150.919, 2661.25, -151.577, 2661.66, -152.823, 2662.58, -153.969, 2663.62, -155.01, 2664.77, -155.94, 2666.02, -156.753, 2667.36, -157.442, 2668.77, -158.003, 2670.25, -158.428, 2671.78, -158.713, 2673.35, -158.852, 2674.94, -158.837, 2676.56, -158.664, 2678.17, -158.327, 2679.78, -157.819, 2681.38, -157.5, 2682.16, -157.135, 2682.94, -156.725, 2683.7, -156.269, 2684.46, -155.766, 2685.2, -155.215, 2685.92, -153.967, 2687.32, -152.519, 2688.64, -150.865, 2689.87, -149, 2691, -32, 2752, -32, 2816, 0, 2816, 0, 2880 )

[node name="Line" parent="GameManager/BossArena/Solids/Left" index="2"]
points = PoolVector2Array( -1920, 2880, -1920, 832, 0, 832, 0, 960, -70.4499, 962.26, -137.713, 969.017, -201.602, 980.273, -261.931, 996.026, -318.511, 1016.28, -371.156, 1041.03, -395.944, 1055.09, -419.679, 1070.28, -442.336, 1086.59, -463.892, 1104.02, -484.324, 1122.58, -503.608, 1142.27, -521.722, 1163.08, -538.641, 1185.02, -554.343, 1208.08, -568.803, 1232.26, -581.999, 1257.57, -593.907, 1284.01, -604.504, 1311.57, -613.766, 1340.25, -628.192, 1401, -636.999, 1466.25, -640, 1536, -640, 2304, -133, 2663, -134.95, 2661.8, -136.865, 2660.84, -138.74, 2660.13, -139.66, 2659.86, -140.569, 2659.65, -141.464, 2659.49, -142.345, 2659.38, -143.212, 2659.32, -144.063, 2659.32, -144.899, 2659.36, -145.718, 2659.45, -146.519, 2659.58, -147.302, 2659.76, -148.066, 2659.98, -148.811, 2660.24, -149.535, 2660.54, -150.238, 2660.88, -150.919, 2661.25, -151.577, 2661.66, -152.823, 2662.58, -153.969, 2663.62, -155.01, 2664.77, -155.94, 2666.02, -156.753, 2667.36, -157.442, 2668.77, -158.003, 2670.25, -158.428, 2671.78, -158.713, 2673.35, -158.852, 2674.94, -158.837, 2676.56, -158.664, 2678.17, -158.327, 2679.78, -157.819, 2681.38, -157.5, 2682.16, -157.135, 2682.94, -156.725, 2683.7, -156.269, 2684.46, -155.766, 2685.2, -155.215, 2685.92, -153.967, 2687.32, -152.519, 2688.64, -150.865, 2689.87, -149, 2691, -32, 2752, -32, 2816, 0, 2816, 0, 2880, -1920, 2880 )

[node name="Right" parent="GameManager/BossArena/Solids" instance=ExtResource( 20 )]
position = Vector2( 0, -3840 )
scale = Vector2( -1, 1 )
curve = SubResource( 15 )
accuracy = 3
radius = 32
sides = 32

[node name="Collision" parent="GameManager/BossArena/Solids/Right/Solid" index="0"]
polygon = PoolVector2Array( -1920, 2880, -1920, 832, 0, 832, 0, 960, -70.4499, 962.26, -137.713, 969.017, -201.602, 980.273, -261.931, 996.026, -318.511, 1016.28, -371.156, 1041.03, -395.944, 1055.09, -419.679, 1070.28, -442.336, 1086.59, -463.892, 1104.02, -484.324, 1122.58, -503.608, 1142.27, -521.722, 1163.08, -538.641, 1185.02, -554.343, 1208.08, -568.803, 1232.26, -581.999, 1257.57, -593.907, 1284.01, -604.504, 1311.57, -613.766, 1340.25, -628.192, 1401, -636.999, 1466.25, -640, 1536, -640, 2304, -212, 2607, -313, 2752, -260, 2789, -158, 2645, -133, 2663, -134.95, 2661.8, -136.865, 2660.84, -138.74, 2660.13, -139.66, 2659.86, -140.569, 2659.65, -141.464, 2659.49, -142.345, 2659.38, -143.212, 2659.32, -144.063, 2659.32, -144.899, 2659.36, -145.718, 2659.45, -146.519, 2659.58, -147.302, 2659.76, -148.066, 2659.98, -148.811, 2660.24, -149.535, 2660.54, -150.238, 2660.88, -150.919, 2661.25, -151.577, 2661.66, -152.823, 2662.58, -153.969, 2663.62, -155.01, 2664.77, -155.94, 2666.02, -156.753, 2667.36, -157.442, 2668.77, -158.003, 2670.25, -158.428, 2671.78, -158.713, 2673.35, -158.852, 2674.94, -158.837, 2676.56, -158.664, 2678.17, -158.327, 2679.78, -157.819, 2681.38, -157.5, 2682.16, -157.135, 2682.94, -156.725, 2683.7, -156.269, 2684.46, -155.766, 2685.2, -155.215, 2685.92, -153.967, 2687.32, -152.519, 2688.64, -150.865, 2689.87, -149, 2691, -32, 2752, -32, 2816, 0, 2816, 0, 2880 )

[node name="Poly" parent="GameManager/BossArena/Solids/Right" index="1"]
polygon = PoolVector2Array( -1920, 2880, -1920, 832, 0, 832, 0, 960, -70.4499, 962.26, -137.713, 969.017, -201.602, 980.273, -261.931, 996.026, -318.511, 1016.28, -371.156, 1041.03, -395.944, 1055.09, -419.679, 1070.28, -442.336, 1086.59, -463.892, 1104.02, -484.324, 1122.58, -503.608, 1142.27, -521.722, 1163.08, -538.641, 1185.02, -554.343, 1208.08, -568.803, 1232.26, -581.999, 1257.57, -593.907, 1284.01, -604.504, 1311.57, -613.766, 1340.25, -628.192, 1401, -636.999, 1466.25, -640, 1536, -640, 2304, -212, 2607, -313, 2752, -260, 2789, -158, 2645, -133, 2663, -134.95, 2661.8, -136.865, 2660.84, -138.74, 2660.13, -139.66, 2659.86, -140.569, 2659.65, -141.464, 2659.49, -142.345, 2659.38, -143.212, 2659.32, -144.063, 2659.32, -144.899, 2659.36, -145.718, 2659.45, -146.519, 2659.58, -147.302, 2659.76, -148.066, 2659.98, -148.811, 2660.24, -149.535, 2660.54, -150.238, 2660.88, -150.919, 2661.25, -151.577, 2661.66, -152.823, 2662.58, -153.969, 2663.62, -155.01, 2664.77, -155.94, 2666.02, -156.753, 2667.36, -157.442, 2668.77, -158.003, 2670.25, -158.428, 2671.78, -158.713, 2673.35, -158.852, 2674.94, -158.837, 2676.56, -158.664, 2678.17, -158.327, 2679.78, -157.819, 2681.38, -157.5, 2682.16, -157.135, 2682.94, -156.725, 2683.7, -156.269, 2684.46, -155.766, 2685.2, -155.215, 2685.92, -153.967, 2687.32, -152.519, 2688.64, -150.865, 2689.87, -149, 2691, -32, 2752, -32, 2816, 0, 2816, 0, 2880 )

[node name="Line" parent="GameManager/BossArena/Solids/Right" index="2"]
points = PoolVector2Array( -1920, 2880, -1920, 832, 0, 832, 0, 960, -70.4499, 962.26, -137.713, 969.017, -201.602, 980.273, -261.931, 996.026, -318.511, 1016.28, -371.156, 1041.03, -395.944, 1055.09, -419.679, 1070.28, -442.336, 1086.59, -463.892, 1104.02, -484.324, 1122.58, -503.608, 1142.27, -521.722, 1163.08, -538.641, 1185.02, -554.343, 1208.08, -568.803, 1232.26, -581.999, 1257.57, -593.907, 1284.01, -604.504, 1311.57, -613.766, 1340.25, -628.192, 1401, -636.999, 1466.25, -640, 1536, -640, 2304, -212, 2607, -313, 2752, -260, 2789, -158, 2645, -133, 2663, -134.95, 2661.8, -136.865, 2660.84, -138.74, 2660.13, -139.66, 2659.86, -140.569, 2659.65, -141.464, 2659.49, -142.345, 2659.38, -143.212, 2659.32, -144.063, 2659.32, -144.899, 2659.36, -145.718, 2659.45, -146.519, 2659.58, -147.302, 2659.76, -148.066, 2659.98, -148.811, 2660.24, -149.535, 2660.54, -150.238, 2660.88, -150.919, 2661.25, -151.577, 2661.66, -152.823, 2662.58, -153.969, 2663.62, -155.01, 2664.77, -155.94, 2666.02, -156.753, 2667.36, -157.442, 2668.77, -158.003, 2670.25, -158.428, 2671.78, -158.713, 2673.35, -158.852, 2674.94, -158.837, 2676.56, -158.664, 2678.17, -158.327, 2679.78, -157.819, 2681.38, -157.5, 2682.16, -157.135, 2682.94, -156.725, 2683.7, -156.269, 2684.46, -155.766, 2685.2, -155.215, 2685.92, -153.967, 2687.32, -152.519, 2688.64, -150.865, 2689.87, -149, 2691, -32, 2752, -32, 2816, 0, 2816, 0, 2880, -1920, 2880 )

[node name="DefaultPieces" type="Node" parent="GameManager/BossArena"]

[node name="FlipperR" parent="GameManager/BossArena/DefaultPieces" instance=ExtResource( 23 )]
position = Vector2( 136, -1160 )
rotation = -0.610865
restAngle = -35

[node name="FlipperL" parent="GameManager/BossArena/DefaultPieces" instance=ExtResource( 23 )]
position = Vector2( -136, -1160 )
rotation = 0.610865
scale = Vector2( -1, 1 )
LeftFlipper = true
restAngle = -35

[node name="Launcher" parent="GameManager/BossArena/DefaultPieces" instance=ExtResource( 21 )]
position = Vector2( 259, -1109 )
rotation = -0.610865
Force = 150

[node name="LaunchGate" parent="GameManager/BossArena/DefaultPieces" instance=ExtResource( 22 )]
position = Vector2( 193, -1207 )
rotation = -0.610865
physics_material_override = SubResource( 16 )

[node name="LevelUtilities" parent="GameManager" instance=ExtResource( 12 )]

[node name="LightsMeta" parent="GameManager" instance=ExtResource( 32 )]

[node name="HUD" parent="GameManager" instance=ExtResource( 13 )]
layer = 113
visible = true

[node name="SkillsMan" parent="GameManager" instance=ExtResource( 10 )]

[node name="BallHandler" parent="GameManager" instance=ExtResource( 11 )]

[node name="PlayerBall" parent="GameManager/BallHandler" instance=ExtResource( 14 )]
position = Vector2( 224, -1184 )

[connection signal="cheatDamage" from="." to="EventManager" method="addDamage"]
[connection signal="LevelEvent" from="EventManager" to="." method="_on_LevelEvent"]
[connection signal="LevelEvent" from="EventManager" to="CompMan" method="event"]
[connection signal="LevelEvent" from="EventManager" to="GameManager" method="_on_LevelEvent"]
[connection signal="LevelEvent" from="EventManager" to="GameManager/BossArena" method="event"]
[connection signal="MetaEvent" from="EventManager" to="." method="_on_MetaEvent"]
[connection signal="MetaEvent" from="EventManager" to="Menus" method="event"]
[connection signal="EndGame" from="GameManager" to="EventManager" method="endGame"]
[connection signal="Win" from="GameManager/BossArena/ConquestPanel" to="EventManager" method="endGame"]
[connection signal="body_entered" from="GameManager/BossArena/AreaTriggers/BossTrigger" to="EventManager" method="tierTrigger" binds= [ 1, true ]]
[connection signal="body_entered" from="GameManager/BossArena/AreaTriggers/BossTrigger" to="GameManager/BossArena" method="setSleep" binds= [ false ]]
[connection signal="body_exited" from="GameManager/BossArena/AreaTriggers/BossTrigger" to="EventManager" method="tierTrigger" binds= [ 1, false ]]
[connection signal="body_exited" from="GameManager/BossArena/AreaTriggers/BossTrigger" to="GameManager/BossArena" method="setSleep" binds= [ true ]]
[connection signal="body_exited" from="GameManager/BossArena/AreaTriggers/LaunchTube" to="EventManager" method="ballLaunched" binds= [ 1 ]]
[connection signal="ballDied" from="GameManager/BossArena/AreaTriggers/DeathTrigger" to="EventManager" method="ballDeath"]
[connection signal="body_entered" from="GameManager/BossArena/AreaTriggers/DeathTrigger" to="GameManager/BossArena/AreaTriggers/DeathTrigger" method="_on_DeathTrigger_body_entered"]
[connection signal="ballsGone" from="GameManager/HUD" to="EventManager" method="_on_HUD_ballsGone"]
[connection signal="skillEvent" from="GameManager/SkillsMan" to="EventManager" method="skill"]

[editable path="StoryCutscene"]
[editable path="GameManager/BossArena/Solids/Left"]
[editable path="GameManager/BossArena/Solids/Right"]
